Fixed minor calc errors